# blogapp_rust

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-07-20-033929_create_users/: up.sql
migrations/2024-07-20-033950_create_comments/: up.sql
migrations/2024-07-26-135003_create_posts/: up.sql
migrations/2024-07-27-101332_create_posts/: up.sql
src/: main.rs  schema.rs
src/controllers/: posts.rs  users.rs
src/db_operations/: db.rs  mod.rs  posts.rs  users.rs
src/models/: app_state.rs  mod.rs  posts.rs  ui.rs  users.rs
templates/: base.html  dashboard.html  login.html  navbar.html  posts.html  register.html  singlepost.html
