[package]
name = "blogapp"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.1", features = ["postgres", "chrono" ]}
dotenvy = "0.15"
chrono = { version = "0.4.38" , features = ["serde" ]}
actix-web = "4"
actix-session = { version = "0.6", features = ["cookie-session"] }
actix-files = "0.6.6"
askama = { version = "0.12.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15.1"

